# mapreduce

./: CMakeLists.txt  README.md  arg_parse.cpp  arg_parse.h  main.cpp  mapreduce.cpp  mapreduce.h
samples/web-crawler/: final_reducer.py  mapper.py  reducer.py  web_crawler.sh
samples/word_count_bash/: mapper.sh  reducer.sh
testing-utils/: clean_tmp.sh
utils/: tmpfile.cpp  tmpfile.h
